# Finance-Close-Control-Tower

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/sample/: README.md  sample_ap_ageing.csv  sample_ar_ageing.csv  sample_bank_rec_exceptions.csv  sample_gl_detail.csv  sample_intercompany_balances.csv  sample_reconciliation_tracker.xlsx  sample_trial_balance.csv  sample_vat_control.csv
docs/: codex_handover.md  data_dictionary.md  deployment.md  release_checklist.md  scoring_model.md  security_and_privacy.md
docs/screenshots/: README.md
outputs/sample_close_pack/: README.md  sample_close_pack.xlsx  sample_close_pack_summary.md
scripts/: generate_sample_data.py  run_pipeline.py
src/finance_close_control_tower/: __init__.py  charts.py  config.py  exports.py  ingestion.py  privacy.py  schema.py  scoring.py  validations.py
tests/: test_deployment_docs.py  test_pipeline.py  test_privacy.py  test_sample_data.py  test_scoring.py  test_validations.py
